--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: python
 python:
-  - "3.6"
-  - "3.6-dev" # 3.6 development branch
-  - "3.7-dev" # 3.7 development branch
-  - "nightly"
-# command to install dependencies
+  - 3.6
+  - nightly
 install:
-  - pip install -r requirements.txt
-# command to run tests
+  - pip3 install -r requirements.txt
+cache: pip3
 script:
   - pytest
