--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,9 @@
 language: python
-
 python:
-  
-	- 3.6
-  
-	- nightly
+  - "3.6"
 
 install:
-  
-	- pip3 install -r requirements.txt
-
-cache: pip3
+  - pip install -r requirements.txt
 
 script:
-  
-	- pytest
+  - pytest
