--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ install:
   - pip install -r requirements.txt
   
 script:
-  - pytest --cov
+  - pytest --cov=app tests/
+after_success:
+  - coveralls
