--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install:
   - pip install -r requirements.txt
   
 script:
-  - pytest --cov=app tests
+  - pytest --cov=app tests/
 after_success:
   - coveralls
