--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 astroid==1.5.3
 click==6.7
 colorama==0.3.9
+coverage==4.4.1
 Flask==0.12.2
 Flask-WTF==0.14.2
 gunicorn==19.7.1
@@ -10,7 +11,10 @@ Jinja2==2.9.6
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
+py==1.4.34
 pylint==1.7.4
+pytest==3.2.3
+pytest-cov==2.5.1
 six==1.11.0
 Werkzeug==0.12.2
 wrapt==1.10.11
